various bugfixes while trying to implement a unit test for ResolveOps.resolveRepositoryContent.